--- a/explore_more.html
+++ b/explore_more.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="sheet/explore_more_style.css">
     <link rel="stylesheet" href="sheet/webapp_style.css">
+    <!-- <link rel="stylesheet" href="sheet/range_style.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Airborne Virus Risk Calculator: Explore More</title>
 </head>
