--- a/explore_more.html
+++ b/explore_more.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="sheet/explore_more_style.css">
     <link rel="stylesheet" href="sheet/webapp_style.css">
+    <link rel="stylesheet" href="sheet/hovertext_style.css">
     <!-- <link rel="stylesheet" href="sheet/range_style.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Airborne Virus Risk Calculator: Explore More</title>
@@ -41,13 +42,199 @@
     </div>
   </div>
 
+<div class="controls-plots-area">
   <a href="webapp.html"> Back to main page </a>
 
 
 <!-- Intro text -->
-<p> Here we have the chance to generate a few different kinds of graphs. </p>
+  <p> Here we have the chance to generate a few different kinds of graphs. </p>
 
-<h2> Parameters</h2>
+  <h2> Parameters</h2>
+
+  <div class="controls-card" style="padding-bottom: 10px;">
+    <div style="display: flex;">
+      <p class="h2">Room dimensions</p>
+      <span class="hovertext" text-hover="This is the placholder text for the card description">
+        <img src="images/info_mark.png" alt="card information" class="question-mark">
+      </span>
+    </div>
+    <div class="controls-alignment">
+      <div class="control-padding">
+        <label for="room-length"> Length (m) </label>
+        <input type="range" id="room-length" name="room-length" min="2" max="10" value="5" step="0.1"
+        oninput="passRoomLength();">
+        <!-- oninput, passRoomLength changes the length of the room visualisation-->
+        <output> 5 </output>
+      </div>
+
+      <div class="control-padding">
+        <label for="room-length"> Width (m) </label>
+        <input type="range" id="room-width" name="room-width" min="2" max="10" value="5" step="0.1"
+        oninput="passRoomWidth();">
+        <!-- oninput, passRoomWidth changes the length of the room visualisation-->
+        <output> 5 </output>
+      </div>
+
+      <div class="control-padding">
+        <label for='roomd-height'> Height (m)</label>
+        <input type="range" id="room-height" name="room-height" min="2" max="4" value="2.5" step="0.1"
+        oninput="this.nextElementSibling.value = this.value">
+        <output>2.5</output>
+      </div>
+    </div>
+  </div>
+
+  <div class="controls-card">
+    <div style="display: flex;">
+      <p class="h2">Infectious person</p>
+      <span class="hovertext" text-hover="This is the placholder text for the card description">
+        <img src="images/info_mark.png" alt="card information" class="question-mark">
+      </span>
+    </div>
+
+    <div class="controls-alignment">
+      <div class="control-padding">
+        <label for='x0'>x</label>
+        <input type='range' id="x0" name="x0" min="0" value="2.5" max="5" step="0.01"
+        oninput="passX0();">
+        <!-- oninput, passX0 updates the infectious person dot-->
+        <output> 2.5 </output>
+      </div>
+
+      <div class="control-padding">
+        <label for='y0'>y</label>
+        <input type='range' id="y0" name="y0" min="0" value="2.5" max="5" step="0.01"
+        oninput="passY0();">
+        <!-- oninput, passY0 updates the infectious person dot-->
+        <output> 2.5 </output>
+      </div>
+
+      <div class="control-padding">
+        <label for="talk">Activity</label>
+        <!--<select id="talk" name="talk" onchange="if(this.options[this.selectedIndex].value=='customOption'){
+            this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
+        }"> -->
+        <select id="talk" name="talk" onchange="show_hide_custom_percent(this)">
+          <option value="0" selected> Just breathing</option>
+          <option value="100"> Just talking </option>
+          <option value="customOption">Choose the % of time talking</option>
+        </select>
+        <input type="range" id="talk-custom" name="talk-custom" style="display:none;" min="0" max="100" step="1" value="50"
+        oninput="this.nextElementSibling.value = this.value + '%'; this.nextElementSibling.style='display:inline';"></input>
+        <output style="display:none">50%</output>
+      </div>
+
+      <div class="control-padding" style="padding-bottom: 10px">
+        <label for="inf-mask">Mask worn</label>
+          <!--<select id="inf-mask" name="inf-mask" onchange="inf_mask_visual();if(this.options[this.selectedIndex].value=='customOption'){
+              this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
+              }"> -->
+        <select id="inf-mask" name="inf-mask" onchange="inf_mask_visual(); show_hide_custom_percent(this)">
+          <option value="0" selected> No mask</option>
+          <option value="0.35"> 1-ply Cloth mask (35%)</option>
+          <option value="0.5"> 3-ply Cloth mask (50%)</option>
+          <option value="0.59"> Surgical mask (59%)</option>
+          <option value="0.9"> N95/FFP2 mask (95%) </option>
+          <option value="customOption">Choose your own mask efficiency (%)</option>
+          </select>
+        <input type="range" id="inf-mask-custom" name="inf-mask-custom" style="display:none;" min="0" max="100" step="1" value="0"
+            onblur="if(this.value==''){toggleField(this,this.previousSibling);}" oninput="this.nextElementSibling.value = this.value + '%'; this.nextElementSibling.style='display:inline';"> </input>
+        <output style="display:none">0%</output>
+        <span class="mask_pic" id="inf_mask_pic"> </span>
+      </div>
+    </div>
+  </div>
+
+  <div class="controls-card">
+    <div style="display: flex;">
+      <p class="h2">Susceptible person</p>
+      <span class="hovertext" text-hover="This is the placholder text for the card description">
+        <img src="images/info_mark.png" alt="card information" class="question-mark">
+      </span>
+    </div>
+
+    <div class="controls-alignment">
+      <div class="control-padding">
+        <label for="x_e">x</label>
+          <input type="range" id="x_e" name="x_e" min="0" max="5" value="1.25" step="0.01"
+          oninput="passXe();">
+          <output>1.25</output>
+      </div>
+
+      <div class="control-padding">
+        <label for="y_e">y</label>
+          <input type="range" id="y_e" name="y_e" min="0" max="5" value="1.25" step="0.01"
+          oninput="passYe();">
+          <output>1.25</output>
+      </div>
+
+      <div class="control-padding">
+        <label for="occ-act">Activity (breathing rate)</label>
+          <!--<select id="occ-act" name="occ-act" onchange="if(this.options[this.selectedIndex].value=='customOption'){
+              this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
+          }"> -->
+          <select id="occ-act" name="occ-act" onchange="show_hide_custom(this)">
+              <option value="8" selected> Sedentary (8l/min)</option>
+              <option value="25"> Active (25l/min)</option>
+              <option value="customOption">Choose your own breathing rate</option>
+          </select><input type="number" id="occ-act-custom" name="occ-act-custom" style="display:none;" min="0" step="0.5"> </input>
+      </div>
+
+      <div class="control-padding" style="padding-bottom: 10px">
+        <label for="occ-mask">Mask worn</label>
+          <!--<select id="occ-mask" name="occ-mask" onchange="sus_mask_visual();if(this.options[this.selectedIndex].value=='customOption'){
+              this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
+          }"> -->
+          <select id="occ-mask" name="occ-mask" onchange="sus_mask_visual(); show_hide_custom_percent(this)">
+              <option value="0" selected> No mask</option>
+              <option value="0.2"> 3-ply Cloth mask (20%)</option>
+              <option value="0.5"> Surgical mask (50%)</option>
+              <option value="0.9"> N95/FFP2 mask (90%) </option>
+              <option value="customOption">Choose your own mask efficiency (%)</option>
+          </select><input type="range" id="occ-mask-custom" name="occ-mask-custom" style="display:none;" min="0" max="100" step="1" value="0"
+          oninput="this.nextElementSibling.value = this.value + '% efficency'; this.nextElementSibling.style='display:inline';"> </input>
+          <output style="display:none">0% efficiency</output>
+          <span class="mask_pic" id="occ_mask_pic"> </span>
+      </div>
+    </div>
+  </div>
+
+  <div class="controls-card">
+    <div style="display: flex;">
+      <p class="h2">Ventilation</p>
+      <span class="hovertext" text-hover="This is the placholder text for the card description">
+        <img src="images/info_mark.png" alt="card information" class="question-mark">
+      </span>
+    </div>
+    <div class="controls-alignment">
+      <div class="control-padding">
+        <label for="vent">Ventilation rate (ACH) </label>
+        <!--<select id="vent" name="vent" onchange="if(this.options[this.selectedIndex].value=='customOption'){
+            this.style.display='none'; this.nextElementSibling.style.display='inline';
+        }"> -->
+        <select id="vent" name="vent" onchange="show_hide_custom(this)">
+          <option value="0.2"> Very poor (0.2 ACH)</option>
+          <option value="0.7" selected> Poor (0.7 ACH)</option>
+          <option value="3"> Good (3.0 ACH)</option>
+          <option value="6"> Very good (6.0 ACH)</option>
+          <option value="customOption">Choose your own ACH value</option>
+        </select><input type="number" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01"></input>
+      </div>
+
+      <div class="control-padding" style="padding-bottom: 10px;">
+        <label for="airflow">Airflow speed (m/s)</label>
+        <!--<select id="airflow" name="airflow" onchange="if(this.options[this.selectedIndex].value=='customOption'){
+            this.style.display='none'; this.nextElementSibling.style.display='inline';
+        }"> -->
+        <select id="airflow" name="airflow" onchange="show_hide_custom(this)">
+          <option value="0"> Off (0  m/s)</option>
+          <option value="0.15" selected> Medium (0.15 m/s)</option>
+          <option value="0.8"> High (0.8 m/s)</option>
+          <option value="customOption">Choose your own airflow speed</option>
+        </select><input type="number" id="airflow-custom" name="airflow-custom" style="display:none;" min="0" step="0.01"> </input>
+      </div>
+    </div>
+  </div>
 
 <div class="boxed">
     <h3> Location Parameters </h3>
@@ -170,7 +357,8 @@
         <span class="mask_pic" id="inf_mask_pic"> </span>
     </p>
 
-    <p> <b>Susceptible person:</b> <label for="occ-act">Activity (breathing rate)</label>
+    <p> <b>Susceptible person:</b>
+      <label for="occ-act">Activity (breathing rate)</label>
         <!--<select id="occ-act" name="occ-act" onchange="if(this.options[this.selectedIndex].value=='customOption'){
             this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
         }"> -->
@@ -315,7 +503,7 @@
     <script src="script/explore_room.js"></script>
     <script src="script/webapp_run.js"></script>
     <script src="script/explore_more.js"></script>
-
+  </div>
 </body>
 
 <footer> Credits</footer>
