improved cards styling and layout, added avatar image to room

--- a/explore_more.html
+++ b/explore_more.html
@@ -53,8 +53,8 @@
     <h2> Parameters</h2>
 
     <div style="display: flex;">
-      <div class="controls-card" style="padding-bottom: 10px;">
-        <div style="display: flex;">
+      <div class="controls-card">
+        <div class="card-headings">
           <p class="h2">Room dimensions</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
@@ -87,7 +87,7 @@
       </div>
 
       <div class="controls-card">
-        <div style="display: flex;">
+        <div class="card-headings">
           <p class="h2">Infectious person</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
@@ -148,7 +148,7 @@
       </div>
 
       <div class="controls-card">
-        <div style="display: flex;">
+        <div class="card-headings">
           <p class="h2">Susceptible person</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
@@ -202,7 +202,7 @@
       </div>
 
       <div class="controls-card">
-        <div style="display: flex;">
+        <div class="card-headings">
           <p class="h2">Ventilation</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
@@ -239,7 +239,7 @@
       </div>
 
       <div class="controls-card">
-        <div style="display: flex;">
+        <div class="card-headings">
           <p class="h2">Event</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
@@ -296,7 +296,7 @@
       <button type="button" onclick="advanced_options()" class="secondary-button"> Advanced options </button> <br>
 
       <div name="advanced-options" id="advanced-options" class="advanced-card" style="display:none;">
-        <div style="display: flex;">
+        <div class="card-headings">
           <p class="h2">Advanced Options</p>
           <span class="hovertext" text-hover="This is the placholder text for the card description">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
