add max to some custom values; still TODO: max to advance option values

--- a/webapp.html
+++ b/webapp.html
@@ -109,9 +109,6 @@
 
             <div class="control-padding">
               <label for="talk">Activity</label>
-              <!--<select id="talk" name="talk" onchange="if(this.options[this.selectedIndex].value=='customOption'){
-                  this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
-              }"> -->
               <select id="talk" name="talk" onchange="show_hide_custom_percent(this)">
                 <option value="0" selected> Just breathing</option>
                 <option value="100"> Just talking </option>
@@ -124,9 +121,6 @@
 
             <div class="control-padding" style="padding-bottom: 10px">
               <label for="inf-mask">Mask worn</label>
-                <!--<select id="inf-mask" name="inf-mask" onchange="inf_mask_visual();if(this.options[this.selectedIndex].value=='customOption'){
-                    this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
-                    }"> -->
               <select id="inf-mask" name="inf-mask" onchange="inf_mask_visual(); show_hide_custom_percent(this)">
                 <option value="0" selected> No mask</option>
                 <option value="0.35"> 1-ply Cloth mask (35%)</option>
@@ -153,16 +147,15 @@
           <div class="controls-alignment">
             <div class="control-padding">
               <label for="vent">Ventilation rate (ACH) </label>
-              <!--<select id="vent" name="vent" onchange="if(this.options[this.selectedIndex].value=='customOption'){
-                  this.style.display='none'; this.nextElementSibling.style.display='inline';
-              }"> -->
               <select id="vent" name="vent" onchange="show_hide_custom(this)">
                 <option value="0.2"> Very poor (0.2 ACH)</option>
                 <option value="0.7" selected> Poor (0.7 ACH)</option>
                 <option value="3"> Good (3.0 ACH)</option>
                 <option value="6"> Very good (6.0 ACH)</option>
                 <option value="customOption">Choose your own ACH value</option>
-              </select><input type="number" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01"></input>
+              </select><input type="range" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01" 
+              value="3" max="40" oninput="this.nextElementSibling.value = this.value;"> </input>
+              <output style="display:none;">3</output>
             </div>
 
             <div class="control-padding" style="padding-bottom: 10px;">
@@ -175,7 +168,9 @@
                 <option value="0.15" selected> Medium (0.15 m/s)</option>
                 <option value="0.8"> High (0.8 m/s)</option>
                 <option value="customOption">Choose your own airflow speed</option>
-              </select><input type="number" id="airflow-custom" name="airflow-custom" style="display:none;" min="0" step="0.01"> </input>
+              </select><input type="range" id="airflow-custom" name="airflow-custom" style="display:none;" min="0" step="0.01"
+              value="0.5" max="3" oninput="this.nextElementSibling.value = this.value;"> </input>
+              <output style="display:none;">0.5</output>
             </div>
           </div>
         </div>
@@ -240,9 +235,10 @@
               <input type="number" name="emission" id="emission" value="480" min="0">
 
               <label for="viral-load">Viral load of infectious person (virus/mL)</label>
-              <select id="viral-load" name="viral-load" onchange="if(this.options[this.selectedIndex].value=='customOption'){
+              <!--<select id="viral-load" name="viral-load" onchange="if(this.options[this.selectedIndex].value=='customOption'){
                   this.style.display='none'; this.nextElementSibling.style.display='inline';
-              }">
+              }"> -->
+              <select id="viral-load" name="viral-load" onchange="show_hide_custom(this)">
                   <option value="4"> Low (10^4)</option>
                   <option value="7"> Average (10^7))</option>
                   <option value="9" selected> High (10^9))</option>
@@ -525,10 +521,13 @@
             this.style.display='none'; this.nextElementSibling.style.display='inline'; this.nextElementSibling.nextElementSibling.style.display='inline';
         }"> -->
         <select id="occ-act" name="occ-act" onchange="show_hide_custom(this)">
-            <option value="8" selected> Sedentary (8l/min)</option>
-            <option value="25"> Active (25l/min)</option>
+            <option value="6" selected> Sedentary (6 l/min)</option>
+            <option value="18"> Active (18 l/min)</option>
+            <option value="54"> Moderate exercise (54 l/min)</option>
             <option value="customOption">Choose your own breathing rate</option>
-        </select><input type="number" id="occ-act-custom" name="occ-act-custom" style="display:none;" min="0" step="0.5"> </input>
+        </select><input type="range" id="occ-act-custom" name="occ-act-custom" style="display:none;" min="3" step="0.1"
+        value="6" max="120" oninput="this.nextElementSibling.value = this.value+'l/min';"> </input>
+        <output style="display:none;">6 l/min</output>
 
         <label for="occ-mask">Mask worn</label>
         <!--<select id="occ-mask" name="occ-mask" onchange="sus_mask_visual();if(this.options[this.selectedIndex].value=='customOption'){
