--- a/explore_more.html
+++ b/explore_more.html
@@ -220,7 +220,9 @@
               <option value="3"> Good (3.0 ACH)</option>
               <option value="6"> Very good (6.0 ACH)</option>
               <option value="customOption">Choose your own ACH value</option>
-            </select><input type="number" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01"></input>
+            </select><input type="range" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01" 
+            value="3" max="40" oninput="this.nextElementSibling.value = this.value;"> </input>
+            <output style="display:none;">3</output>
           </div>
 
           <div class="control-padding" style="padding-bottom: 10px;">
@@ -233,7 +235,9 @@
               <option value="0.15" selected> Medium (0.15 m/s)</option>
               <option value="0.8"> High (0.8 m/s)</option>
               <option value="customOption">Choose your own airflow speed</option>
-            </select><input type="number" id="airflow-custom" name="airflow-custom" style="display:none;" min="0" step="0.01"> </input>
+            </select><input type="range" id="airflow-custom" name="airflow-custom" style="display:none;" min="0" step="0.01"
+            value="0.5" max="3" oninput="this.nextElementSibling.value = this.value;"> </input>
+            <output style="display:none;">0.5</output>
           </div>
         </div>
       </div>
@@ -591,9 +595,13 @@
         }"> -->
         <select id="occ-act" name="occ-act" onchange="show_hide_custom(this)">
             <option value="8" selected> Sedentary (8l/min)</option>
-            <option value="25"> Active (25l/min)</option>
+            <option value="6" selected> Sedentary (6 l/min)</option>
+            <option value="18"> Active (18 l/min)</option>
+            <option value="54"> Moderate exercise (54 l/min)</option>
             <option value="customOption">Choose your own breathing rate</option>
-        </select><input type="number" id="occ-act-custom" name="occ-act-custom" style="display:none;" min="0" step="0.5"> </input>
+        </select><input type="range" id="occ-act-custom" name="occ-act-custom" style="display:none;" min="3" step="0.1"
+        value="6" max="120" oninput="this.nextElementSibling.value = this.value+'l/min';"> </input>
+        <output style="display:none;">6 l/min</output>
 
         <label for="occ-mask">Mask worn</label>
         <!--<select id="occ-mask" name="occ-mask" onchange="sus_mask_visual();if(this.options[this.selectedIndex].value=='customOption'){
