--- a/webapp.html
+++ b/webapp.html
@@ -132,7 +132,7 @@
               <input type="range" id="inf-mask-custom" name="inf-mask-custom" style="display:none;" min="0" max="100" step="1" value="0"
                   onblur="if(this.value==''){toggleField(this,this.previousSibling);}" oninput="this.nextElementSibling.value = this.value + '%'; this.nextElementSibling.style='display:inline';"> </input>
               <output style="display:none">0%</output>
-              <span class="mask_pic" id="inf_mask_pic"> </span>
+              <!-- <span class="mask_pic" id="inf_mask_pic"> </span> -->
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
                 <option value="3"> Good (3.0 ACH)</option>
                 <option value="6"> Very good (6.0 ACH)</option>
                 <option value="customOption">Choose your own ACH value</option>
-              </select><input type="range" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01" 
+              </select><input type="range" id="vent-custom" name="vent-custom" style="display:none;" min="0.1" step="0.01"
               value="3" max="40" oninput="this.nextElementSibling.value = this.value;"> </input>
               <output style="display:none;">3</output>
             </div>
@@ -317,11 +317,12 @@
 
       </div>
 
+      <br>
       <div style="display: flex; justify-content: space-between;">
         <div style="display: flex; flex-direction: column;">
           <div style="display: flex;">
             <div>
-              <h2>Visuals</h2>
+              <p class="h2">Dynamic 2D-room representation</p>
             </div>
             <div>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -329,21 +330,42 @@
               </span>
             </div>
           </div>
-        <!-- Room rectangle can be dragged to resize.
+          <!-- Room rectangle can be dragged to resize.
             and the Infectious person dot can be dragged to be repositioned.-->
-          <div class="room-visual" id="room-visual"
+          <div style="display: flex;">
+            <div class="room-visual" id="room-visual"
             onmouseleave="getRoomDim();" onmouseup="getRoomDim()"
             ondragover="allowDrop(event);">
             <!-- <div class="drag_dot" id="source_dot" draggable="true" ondrag='dragInf(event);' ondragend="dragInfend(event);"></div> -->
-            <div class="infectious-avatar" id="source_dot" draggable="true" ondrag='dragInf(event);' ondragend="dragInfend(event);"></div>
+            <div style="display: flex;">
+              <div class="infectious-avatar" id="source_dot" draggable="true" ondrag='dragInf(event);' ondragend="dragInfend(event);"></div>
+              <div>
+                <span class="mask_pic" id="inf_mask_pic"> </span>
+              </div>
+            </div>
           </div>
+          <div>
+            <p style="margin: 0px 0px 5px 5px;"><strong>Mask worn:</strong></p>
+            <div style="display: flex">
+            <div>
+              <img src="images/infected_person.png" alt="infectious_person_illustration" style="aspect-ratio: 1/1; width: 40px;">
+            </div>
+            <div>
+            </div>
+          </div>
+          </div>
+
+          <div>
+          </div>
+        </div>
           <br>
         </div>
+
 
         <div style="display: flex; flex-direction: column;">
           <div style="display: flex">
             <div>
-              <h2>Room and Air circulation illustration</h2>
+              <p class="h2">3D-room and air circulation illustration</p>
             </div>
             <div>
               <span class="hovertext" text-hover="This is the placholder text for the card description">
@@ -378,7 +400,7 @@
             <div>
               <h2>Output Message</h2>
             </div>
-            <div style="box-shadow: var(--box-shadow);">
+            <div style="box-shadow:  var(--box-shadow); border-radius: var(--border-radius); ">
               <p class="output-message"><span id="risk_avg" style="display:none"></span><span id="infected" style="display:none"></span></p>
             </div>
           </div>
@@ -513,7 +535,7 @@
         <input type="range" id="inf-mask-custom" name="inf-mask-custom" style="display:none;" min="0" max="100" step="1" value="0"
             onblur="if(this.value==''){toggleField(this,this.previousSibling);}" oninput="this.nextElementSibling.value = this.value + '% efficiency'; this.nextElementSibling.style='display:inline';"> </input>
         <output style="display:none">0 % efficiency</output>
-        <span class="mask_pic" id="inf_mask_pic"> </span>
+        <span class="mask_pic" id="inf_mask_pic"></span>
     </p>
 
     <p> <b>Susceptible person:</b> <label for="occ-act">Activity (breathing rate)</label>
